Fix T70901: Pose bone with Armature Constraint moves in wrong direction

A regression since previous fix for proxy. Restore old code for copying
values to an original pose channel.